[gd_scene load_steps=2 format=3 uid="uid://cjwlv43k5lfnc"]

[ext_resource type="Script" uid="uid://cmt2e70ukqhf4" path="res://scenes/ui/settings.gd" id="1_5p8wc"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5p8wc")

[node name="MusicCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 529.0
offset_top = 267.0
offset_right = 603.0
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
text = "Music"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 523.0
offset_top = 383.0
offset_right = 616.0
offset_bottom = 423.0

[node name="BackButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="SaveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save"
